[package]
name = "commonware-aggregation"
edition = "2021"
publish = true
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "aggregate signatures from multiple contributors over the BN254 curve."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/examples/aggregation"
documentation = "https://docs.rs/commonware-aggregation"

[dependencies]
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus-client = { workspace = true }
governor = { workspace = true }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
eigen-crypto-bn254 = "0.1.3"
eigen-crypto-bls = "0.1.3"
eigen-services-blsaggregation = "=0.3.0"
eigen-client-avsregistry = "=0.3.0"
eigen-logging = "=0.3.0"
eigen-services-avsregistry = "=0.3.0"
eigen-services-operatorsinfo = "=0.3.0"
alloy = "0.8.0"
alloy-provider = "0.5.4"
alloy-network = "0.5.4"
eigen-types = "=0.3.0"
eigen-utils = "=0.3.0"
dotenv = "0.15.0"
axum = { version = "0.7", features = ["ws"] }
tokio-util = "0.7"
url = { version = "2.0", features = ["serde"] }
alloy-primitives = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
alloy-provider = "0.5.4"
alloy-network = "0.5.4"
url = { version = "2.0", features = ["serde"] }
dotenv = "0.15.0"

[build-dependencies]
prost-build = { workspace = true }

[[bin]]
name = "commonware-aggregation"
bench = false
